force-app/main/default/objects/Account/fields/AltNumber__c.field-meta.xml
<CustomField>
    <fullName>AltNumber__c</fullName>
    <label>Alt Number</label>
    <type>Phone</type>
</CustomField>