force-app/main/default/objects/Account/fields/BillToContact__c.field-meta.xml
<CustomField>
    <fullName>BillToContact__c</fullName>
    <description>This is Temporary Filed</description>
    <label>Bill to Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>