force-app/main/default/objects/Account/fields/HasCreditCard__c.field-meta.xml
<CustomField>
    <fullName>HasCreditCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Credit Card</label>
    <type>Checkbox</type>
</CustomField>