force-app/main/default/objects/Account/fields/LastActivatedOrderDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivatedOrderDate__c</fullName>
    <description>This is used to store the Latest Order Activated date</description>
    <label>Last Activated Order Date</label>
    <type>Date</type>
</CustomField>