force-app/main/default/objects/Account/fields/OpenBalance__c.field-meta.xml
<CustomField>
    <fullName>OpenBalance__c</fullName>
    <label>Open Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>