force-app/main/default/objects/Account/fields/OrderTotal__c.field-meta.xml
<CustomField>
    <fullName>OrderTotal__c</fullName>
    <description>This is used to store Totta Orders amount on opportunity</description>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>