force-app/main/default/objects/Account/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imported</fullName>
            </value>
            <value>
                <fullName>Web-to-Lead</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
                <isActive>false</isActive>
                <label>Advertisement</label>
            </value>
            <value>
                <fullName>Call In</fullName>
                <isActive>false</isActive>
                <label>Call In</label>
            </value>
            <value>
                <fullName>Lead Provider</fullName>
                <isActive>false</isActive>
                <label>Lead Provider</label>
            </value>
            <value>
                <fullName>Manually</fullName>
                <isActive>false</isActive>
                <label>Manually</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Rep Queue: Chad Jackson</fullName>
                <isActive>false</isActive>
                <label>Rep Queue: Chad Jackson</label>
            </value>
            <value>
                <fullName>Rep Queue: Ernesto Robles</fullName>
                <isActive>false</isActive>
                <label>Rep Queue: Ernesto Robles</label>
            </value>
            <value>
                <fullName>Rep Queue: Joe Olivares</fullName>
                <isActive>false</isActive>
                <label>Rep Queue: Joe Olivares</label>
            </value>
            <value>
                <fullName>Rep Queue: Justin Lowrey</fullName>
                <isActive>false</isActive>
                <label>Rep Queue: Justin Lowrey</label>
            </value>
            <value>
                <fullName>Rep Queue: Kevin Schwanke</fullName>
                <isActive>false</isActive>
                <label>Rep Queue: Kevin Schwanke</label>
            </value>
            <value>
                <fullName>Rep Queue: Mark Sehnem</fullName>
                <isActive>false</isActive>
                <label>Rep Queue: Mark Sehnem</label>
            </value>
            <value>
                <fullName>Walk In</fullName>
                <isActive>false</isActive>
                <label>Walk In</label>
            </value>
            <value>
                <fullName>Website</fullName>
                <isActive>false</isActive>
                <label>Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>