force-app/main/default/objects/Account/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <label>Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>