force-app/main/default/objects/Account/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <description>This is Temporary Field</description>
    <label>Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>