force-app/main/default/objects/Account/fields/SalesTax__c.field-meta.xml
<CustomField>
    <fullName>SalesTax__c</fullName>
    <label>Sales Tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>