force-app/main/default/objects/Account/fields/Shipping2Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping2Country__c</fullName>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>