force-app/main/default/objects/Account/fields/Shipping2StateProvince__c.field-meta.xml
<CustomField>
    <fullName>Shipping2StateProvince__c</fullName>
    <label>Shipping State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>