force-app/main/default/objects/Account/fields/Shipping2Street__c.field-meta.xml
<CustomField>
    <fullName>Shipping2Street__c</fullName>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>