force-app/main/default/objects/Account/fields/ShippToContact__c.field-meta.xml
<CustomField>
    <fullName>ShippToContact__c</fullName>
    <description>Temporary</description>
    <label>Shipp To Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>