force-app/main/default/objects/Account/fields/TaxItem__c.field-meta.xml
<CustomField>
    <fullName>TaxItem__c</fullName>
    <description>This is Temporary filed</description>
    <label>Tax item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>