force-app/main/default/objects/Account/fields/UpdateAccount__c.field-meta.xml
<CustomField>
    <fullName>UpdateAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to check the Account Activity date is greater than 18 Month Or not</description>
    <label>Update Account</label>
    <type>Checkbox</type>
</CustomField>