force-app/main/default/objects/Account/fields/UpdateAccountDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateAccountDate__c</fullName>
    <description>This field is used to store Update Account Date</description>
    <label>Update Account Date</label>
    <type>Date</type>
</CustomField>