force-app/main/default/objects/Account/fields/VendorNumber__c.field-meta.xml
<CustomField>
    <fullName>VendorNumber__c</fullName>
    <label>Vendor Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>