force-app/main/default/objects/Account/listViews/Current_Accounts.listView-meta.xml
<ListView>
    <fullName>Current_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LastActivatedOrderDate__c</columns>
    <columns>HasCreditCard__c</columns>
    <columns>OpenBalance__c</columns>
    <columns>OrderTotal__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LastActivatedOrderDate__c</field>
        <operation>equals</operation>
        <value>LAST_N_MONTHS:18</value>
    </filters>
    <label>Current Accounts</label>
</ListView>