force-app/main/default/objects/Account/listViews/House_Book_Accounts.listView-meta.xml
<ListView>
    <fullName>House_Book_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LastActivatedOrderDate__c</columns>
    <columns>HasCreditCard__c</columns>
    <columns>OpenBalance__c</columns>
    <columns>OrderTotal__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>INACTIVE</value>
    </filters>
    <label>House Book Accounts</label>
</ListView>