force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LastActivatedOrderDate__c</columns>
    <columns>HasCreditCard__c</columns>
    <columns>OpenBalance__c</columns>
    <columns>OrderTotal__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>