force-app/main/default/objects/Account/listViews/Update_Accounts.listView-meta.xml
<ListView>
    <fullName>Update_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LastActivatedOrderDate__c</columns>
    <columns>HasCreditCard__c</columns>
    <columns>OpenBalance__c</columns>
    <columns>OrderTotal__c</columns>
    <columns>UpdateAccount__c</columns>
    <columns>UpdateAccountDate__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UpdateAccount__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Update Accounts</label>
</ListView>